--- a/PatientProject.Web/appsettings.json
+++ b/PatientProject.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost; port=5452; Database=patient; Username=postgres; Password=postgres"
+  },
   "AllowedHosts": "*"
 }
