--- a/PatientProject.Web/PatientProject.Web.csproj
+++ b/PatientProject.Web/PatientProject.Web.csproj
@@ -7,7 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.27">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PatientProject.Core\PatientProject.Core.csproj" />
+      <ProjectReference Include="..\PatientProject.Infrastructure\PatientProject.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
