add docker logic

--- a/PatientProject.Web/appsettings.json
+++ b/PatientProject.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost; port=5452; Database=patient; Username=postgres; Password=postgres"
+    "PostgreSQL": "Host=patient_postgres; port=5432; Database=patient; Username=postgres; Password=postgres"
   },
   "AllowedHosts": "*"
 }
