--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,36 @@
-version: '3.5'
+version: '3.4'
+networks:
+  dev:
+    driver: bridge
 services:
+    patient_postgres:
+        image: postgres:16.1-alpine3.19
+        container_name: patient_postgres
+        restart: always
+        environment:
+          POSTGRES_PASSWORD: postgres
+          TZ: "Europe/Minsk"
+          PGTZ: "Europe/Minsk"
+        command: postgres -c max_connections=1000
+        ports:
+          - "5452:5432"
+        healthcheck:
+          test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+          interval: 10s
+          timeout: 5s
+          retries: 5
+        networks:
+            - dev
 
-  postgres:
-    image: postgres:16.1-alpine3.19
-    container_name: patient_postgres
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: postgres
-      TZ: "Europe/Minsk"
-      PGTZ: "Europe/Minsk"
-    command: postgres -c max_connections=1000
-    ports:
-      - "5452:5432"
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    patientproject.web:
+        image: ${DOCKER_REGISTRY-}patientprojectweb
+        container_name: patient_project
+        #environment:
+           # - ConnectionStrings__PostgreSQL=User ID =postgres;Password=postgres;Server=patient_postgres;Port=5432;Database=patient;
+        ports:
+          - 8787:80
+        build:
+            context: .
+            dockerfile: PatientProject.Web/Dockerfile
+        networks:
+            - dev
